# Mask-recognition

./: CMakeLists.txt  Check.h  Check2.h  CycleTest.py  MaskApi.py  README.md  main.cpp  sound.py  workspace.code-workspace
Data/: mask_detector.nb  pyramidbox_lite.nb
Paddle-Lite/include/: paddle_use_kernels.h  paddle_use_ops.h
